coupla bugs squashed ig

--- a/projectStyles.css
+++ b/projectStyles.css
@@ -15,8 +15,8 @@ h1 {
 }
 
 .gallery-img {
-    width: 500px;
-    height: 500px;
+    width: 300px;
+    height: 300px;
     background-color: rgb(157, 158, 158);
     border-radius: 10px;
 }
@@ -37,4 +37,8 @@ h1 {
 
 .project-info {
     max-width: 500px;
+}
+
+.back {
+    margin-left: -12px;
 }
